executed berkeley db with subtrace instrumentation